--- a/src/SuperMaxxii.TikTokCounter/SuperMaxxii.TikTokCounter.csproj
+++ b/src/SuperMaxxii.TikTokCounter/SuperMaxxii.TikTokCounter.csproj
@@ -4,6 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Authors>Nick Polyderopoulos</Authors>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <FileVersion>1.0.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
